# RstyOS

./: .gdb_history  .gitignore  Cargo.toml  Makefile  notes.md
libs/bump_allocator/: Cargo.toml
libs/bump_allocator/src/: lib.rs
libs/hole_list_allocator/: Cargo.toml
libs/hole_list_allocator/src/: lib.rs
src/: console.rs  lib.rs  vga_buffer.rs
src/arch/x86_64/: boot.asm  grub.cfg  linker.ld  long_mode_init.asm  long_mode_init.asm~  multiboot_header.asm
src/drivers/: mod.rs
src/interrupts/: idt.rs  mod.rs
src/keyboard/: mod.rs
src/memory/: area_frame_allocator.rs  mod.rs
src/memory/paging/: mapper.rs  mod.rs  table.rs  temporary_page.rs
src/pci/: mod.rs
src/pic/: mod.rs
src/ringbuffer/src/: lib.rs
src/vga/: cursor.rs  mod.rs
