[package]
name = "rustyos"
version = "0.1.0"
authors = ["nxnfufunezn <nxnfufunezn@gmail.com>"]

[dependencies]
bit_field = "0.1.0"
bitflags = "0.7.0"
once = "0.2.1"
rlibc = "0.1.4"
spin = "0.4.2"
cpuio = "0.2.0"

[dependencies.hole_list_allocator]
path = "libs/hole_list_allocator"

[dependencies.multiboot2]
git = "https://github.com/phil-opp/multiboot2-elf64"

[dependencies.x86]
default-features = false
version = "0.7.0"

[lib]
crate-type = ["staticlib"]

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
